docs/reports/evidence/v1/report.md
# Baseline evaluation report

- Run ID: bf0e1dba448245e98988805103fd950d
- Mode: live
- Dataset ID: a18da5f8cb690da17e66774488f932f0f3bee2853de80150d142614b8d53c8b2
- Prompt version: baseline-system-v1+ecommerce-schema-v1+metrics-v1+sha256:ca0f1d30dcb41c9c6634ac0bfb15e65ac2283ae4ccbfc11897b8e164dd681e25
- Requested model: deepseek-v4-flash
- Resolved models: (none)
- Result accuracy: 0.0000
- Valid SQL rate: 0.0000
- Execution success rate: 0.0000
- Total cost (CNY): 0.000000
- Average cost (CNY): 0.000000
- P50 latency: 0 ms
- P95 latency: 0 ms
- Status counts: passed=0, wrong_answer=0, invalid_sql=20, execution_error=0

| Case | Status | Score | Latency (ms) | Input tokens | Output tokens | Cost (CNY) | Error type |
| --- | --- | ---: | ---: | ---: | ---: | ---: | --- |
| G001 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G002 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G003 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G004 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G005 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G006 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G007 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G008 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G009 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G010 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G011 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G012 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G013 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G014 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G015 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G016 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G017 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G018 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G019 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
| G020 | invalid_sql | 0.0000 | 0 | 0 | 0 | 0.000000 | generation_invalid_content |
